--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "vue-cli-service lint",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-    
   },
   "dependencies": {
     "core-js": "^2.6.5",
     "gh-pages": "^2.1.1",
     "vue": "^2.6.10",
+    "vue-meta": "^2.3.2",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
